--- a/react-2/src/App.css
+++ b/react-2/src/App.css
@@ -39,3 +39,11 @@
 .h1-container{
   text-align: center;
 }
+
+.date-container{
+  font-weight: 600;
+  text-align: center;
+}
+.container{
+  text-align: center;
+}
